--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -53,35 +53,9 @@
             </nav>
         </div>
     </header>
-    <section class="stay__home bc-banner">
-        <div
-            class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
-            <div class="left__side d-flex flex-column col-12 col-lg-6 p-0 pt-3 pt-lg-0">
-                <h1 class="title f-40 helvetica-75 mb-5">
-                    დარჩი სახლში და
-                    განაგრძე განვითარება
-                    <img src="./img/succes.svg" alt="" class="icon">
-                </h1>
-                <span class="c-blak helvetica-55">დარეგისტრირდი მიიღე 50%-მდე ფასდაკლება
-                    საუკეთესო ონლაინ კურსებზე</span>
-                <div class="mt-5">
-                    <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
-                </div>
-            </div>
-            <div class="right__side">
-                <img src="./img/stay-home.svg" alt="">
-            </div>
-        </div>
-    </section>
-    <!-- <div class="main-body">
+    <div style="min-height: calc(100vh - 480px);">
 
-        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
-            <span class="mr-2 firagor">i_am_politically_exposed</span>
-            <input type="checkbox" id="isPoliticallyExposedPerson" />
-            <span class="checkmark"></span>
-        </label>
-    </div> -->
-
+    </div>
     <footer class="footer">
         <div class="up__side center d-flex justify-content-between pb-2">
             <ul class="left__side fuuter__lists mt-5 col-4 p-0">
@@ -171,35 +145,6 @@
 
         </div>
     </footer>
-
-
-
-    <!-- <div class="dropdown ">
-        <button class="btn transition btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false">
-            სტატიკურიასდ
-        </button>
-        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-    </div>
-
-    <select class=" select js-example-basic-single" name="state">
-        <option value="AL">Alabama</option>
-        ...
-        <option value="WY">Wyoming</option>
-    </select>
-    <a href="home.html" class="d-flex justify-center justify-content-md-end flex-column">go to home</a>
-    <div class="w-100 justify-content-lg-center"></div>
-
-    <button class="button">სტატიკური</button> -->
-
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
