--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -83,22 +83,22 @@
             </ul>
             <ul class="center__side fuuter__lists mt-5 col-4 p-0">
                 <li class="list">
-                    <span class="c-black f-14 helvetica-75">გვერდები</span>
+                    <a class="c-black f-14 helvetica-75">გვერდები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-5">
-                    <span class="c-light-text f-14 helvetica-55">კურსები</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">კურსები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">მასტერკლასები</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">მასტერკლასები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">შეთავაზებები</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">შეთავაზებები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">ბლოგი</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">ბლოგი</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">ჩვენ შესახებ</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">ჩვენ შესახებ</a>
                 </li>
             </ul>
             <ul class="right__side fuuter__lists mt-5 col-4 p-0">
