--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -73,6 +73,144 @@
             </div>
         </div>
     </section>
+    <section class="premiup__prizes">
+        <div class="center d-flex">
+            <div class="left__side col-6 d-flex flex-wrap p-0">
+                <div class="col-6 p-2">
+                    <div class="block d-flex justify-content-center align-items-center">
+                        <img src="./img/purple-Path183.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 p-2">
+                    <div class="block d-flex justify-content-center align-items-center">
+                        <img src="./img/Group 420.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 p-2">
+                    <div class="block d-flex justify-content-center align-items-center">
+                        <img src="./img/Group 460.svg" alt="">
+                    </div>
+                </div>
+                <div class="col-6 p-2">
+                    <div class="block d-flex justify-content-center align-items-centerk">
+                        <img src="./img/Group 469.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="right__side col-6 d-flex flex-column justify-content-center">
+                <h1 class="f-30 c-black helvetica-75 mb-5">პრემიუმ კურსები ტოპ
+                    ლექტორებისგან</h1>
+                <span class="f-16 c-light-text helvetica-55">გახდი ციფრული სამყაროს პროფესიონალი,
+                    გაიზიარე ექსპერტების გამოცდილება
+                    შექმენი შენი დიზაინი.</span>
+                <div class="mt-5">
+                    <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="popular__courses bc-banner">
+        <div class="center">
+            <div class="d-flex  align-items-center flex-column mb-4">
+                <h1 class="f-30 helvetica-75 c-black mb-3">პოპულარული კურსები</h1>
+                <span class="c-black f-16 helvetica-55">გაიარე ჩვენთან არსებული პოპულარული კურსები</span>
+            </div>
+            <div class="main">
+                <div class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end">
+                    <div class="up__side bc-blue d-flex justify-content-between align-items-end">
+                        <div class="img-block d-flex align-items-center pl-3">
+                            <img src="./img/Group 342.svg" alt="">
+                        </div>
+                        <img src="./img/face.svg" alt="">
+                    </div>
+                    <div class="down__side py-3">
+
+                        <div class="d-flex- flex-column px-3 mb-3">
+                            <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                            <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                            <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
+                            <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                შესაძლებელი გახადა, რომ სხვადასხვა
+                                პროფესიის ადამიანებმა თავად
+                                შეძლონ საკუთარი იდეების რეალიზება.</span>
+                        </div>
+                        <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="left__side d-flex align-items-center">
+                                <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                <span class="f-20 pl-1 helvetica-75 c-black like__remove">1250 ₾</span>
+                            </div>
+                            <div class="right__side">
+                                <button class=" helvetica-75 blue-hover-button">რეგისტრაცია</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end">
+                    <div class="up__side bc-orange d-flex justify-content-between align-items-end">
+                        <div class="img-block d-flex align-items-center pl-3">
+                            <img src="./img/Group 342.svg" alt="">
+                        </div>
+                        <img src="./img/face.svg" alt="">
+                    </div>
+                    <div class="down__side py-3">
+
+                        <div class="d-flex- flex-column px-3 mb-3">
+                            <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                            <h1 class="f-20 mt-4 c-black helvetica-75 mb-4">WEB დეველოპმენტი</h1>
+                            <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
+                            <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                შესაძლებელი გახადა, რომ სხვადასხვა
+                                პროფესიის ადამიანებმა თავად
+                                შეძლონ საკუთარი იდეების რეალიზება.</span>
+                        </div>
+                        <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="left__side d-flex align-items-center">
+                                <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                <span class="f-20 pl-1 helvetica-75 c-black like__remove">1250 ₾</span>
+                            </div>
+                            <div class="right__side">
+                                <button class=" helvetica-75 orange-hover-button">რეგისტრაცია</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="block overflow-hidden col-12 p-0 d-flex flex-column justify-content-end">
+                    <div class="up__side bc-purple d-flex justify-content-between align-items-end">
+                        <div class="img-block d-flex align-items-center pl-3">
+                            <img src="./img/Group 342.svg" alt="">
+                        </div>
+                        <img src="./img/face.svg" alt="">
+                    </div>
+                    <div class="down__side py-3">
+
+                        <div class="d-flex- flex-column px-3 mb-3">
+                            <span class="f-14 c-light-text helvetica-55">საბაზისო</span>
+                            <h1 class="f-20 mt-4 c-black helvetica-75">WEB დეველოპმენტი</h1>
+                            <span class="f-14 c-light-text helvetica-55">ქრისტინა კემულარია</span>
+                            <span class="f-14 d-block mt-4 c-light-text helvetica-55">ტექნოლოგიების განვითარებამ
+                                შესაძლებელი გახადა, რომ სხვადასხვა
+                                პროფესიის ადამიანებმა თავად
+                                შეძლონ საკუთარი იდეების რეალიზება.</span>
+                        </div>
+                        <div class="bottom mt-5 d-flex align-items-center justify-content-between pr-3">
+                            <div class="left__side d-flex align-items-center">
+                                <span class="f-23 pl-3 helvetica-75 c-black">1250 ₾</span>
+                                <span class="f-20 pl-1 helvetica-75 c-black like__remove">1250 ₾</span>
+                            </div>
+                            <div class="right__side">
+                                <button class=" helvetica-75 purple-hover-button">რეგისტრაცია</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
     <!-- <div class="main-body">
         <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
             <span class="mr-2 firagor">i_am_politically_exposed</span>
@@ -131,12 +269,14 @@
                     <span class="c-black f-14 helvetica-75">დაგვიკავშირდით</span>
                 </li>
                 <li class="list d-flex align-items-center mt-5">
-                    <span class="c-light-text f-14 helvetica-55 col-10 p-0">გამოიწერე სიახლეები და მიიღე დროულად ყველა ინფორმაცია ჩვენ შესახებ </span>
+                    <span class="c-light-text f-14 helvetica-55 col-10 p-0">გამოიწერე სიახლეები და მიიღე დროულად ყველა
+                        ინფორმაცია ჩვენ შესახებ </span>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
                     <form action="" class="mail__form col-6 p-0">
                         <div class=" position-relative">
-                            <input class="mail__input helvetica-55 c-light-text f-12 w-100" type="text" placeholder="ელ-ფოსტა">
+                            <input class="mail__input helvetica-55 c-light-text f-12 w-100" type="text"
+                                placeholder="ელ-ფოსტა">
                             <img class="icon" src="./img/Icons.svg" alt="">
                         </div>
                         <div class="mt-2">
@@ -149,7 +289,8 @@
                     </form>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55 col-10 p-0">ვეთანხმები ციფრული ინდისუტრიის აკადემიის კონფიდენციალურობის პილიტიკას</span>
+                    <span class="c-light-text f-14 helvetica-55 col-10 p-0">ვეთანხმები ციფრული ინდისუტრიის აკადემიის
+                        კონფიდენციალურობის პილიტიკას</span>
                 </li>
             </ul>
         </div>
