--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <!-- <header class="header">
         <div class="header__Block center h-100 d-flex align-items-center mx-auto    ">
 
             <a class="logo__block mr-5" href="index.html">
@@ -52,7 +52,7 @@
                 </ul>
             </nav>
         </div>
-    </header>
+    </header> -->
     <section class="stay__home bc-banner">
         <div
             class="home__block position-relative center d-flex align-items-center flex-column-reverse flex-lg-row py-3">
