--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -211,6 +211,75 @@
             </div>
         </div>
     </section>
+    <section class="academy__section">
+        <div class="center d-flex align-items-center justify-content-between">
+            <div class="left__side col-6 pointer">
+                <img src="./img/Group 1178.svg" alt="">
+            </div>
+            <div class="right__side col-6">
+                <span class="f-30 helvetica-75 c-black d-block mb-4">რა არის ჩვენი აკადემია?</span>
+                <span class="f-16 c-light-text helvetica-55">აყევი ციფრული სამყაროს რითმს. ციფრული
+                    უნდუსტრიის აკადემია უზრუნველყოფს თქვენზე
+                    მორგებული პრინციპით.</span>
+                <div class="mt-5">
+                    <button class=" helvetica-75 blue-button">რეგისტრაცია</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="count__section bc-banner">
+        <div class="center d-flex justify-content-between py-5">
+            <div class="block col-3 d-flex flex-column align-items-center">
+                <span class="f-35 c-blue helvetica-75">1234</span>
+                <span class="f-20 c-light-text helvetica-75">კურსდამთავრებული</span>
+            </div>
+            <div class="block col-3 d-flex flex-column align-items-center">
+                <span class="f-35 c-blue helvetica-75">45</span>
+                <span class="f-20 c-light-text helvetica-75">დასრულებული კურსი</span>
+            </div>
+            <div class="block col-3 d-flex flex-column align-items-center">
+                <span class="f-35 c-blue helvetica-75">240</span>
+                <span class="f-20 c-light-text helvetica-75">დასაქმებული</span>
+            </div>
+            <div class="block col-3 d-flex flex-column align-items-center">
+                <span class="f-35 c-blue helvetica-75">84</span>
+                <span class="f-20 c-light-text helvetica-75">მასტერკლასი</span>
+            </div>
+        </div>
+    </section>
+    <section class="master__class">
+        <div class="center d-flex flex-column align-items-center">
+            <h1 class="f-30 mb-4 helvetica-75 c-black">მასტერკლასები</h1>
+            <div class="block d-flex align-items-center w-100">
+                <div class="left__side col-6">
+                    <img src="./img/Group 968.svg" alt="">
+                </div>
+                <div class="right__side col-6">
+                    <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+                        უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+                    <form action="" class="masterclass__form mt-5">
+                        <div class="name__surname d-flex">
+                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="სახელი">
+                            <input class="input ml-2 col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="გვარი">
+                        </div>
+                        <div class="phone d-flex mt-3">
+                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="ტელ. ნომერი">
+                        </div>
+                    </form>
+                    <div class="mt-2">
+                        <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
+                            <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text">ვეთანხმები პირობებს</span>
+                            <input type="checkbox" id="isPoliticallyExposedPerson" />
+                            <span class="checkmark"></span>
+                        </label>
+                        <span class="f-12 helvetica-55 c-light-text d-flex mt-3 col-9 p-0">ვეთანხმები ციფრული ინდისუტრიის აკადემიის 
+                            კონფიდენციალურობის პილიტიკას.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- <div class="main-body">
         <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
             <span class="mr-2 firagor">i_am_politically_exposed</span>
@@ -218,6 +287,20 @@
             <span class="checkmark"></span>
         </label>
     </div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <footer class="footer">
         <div class="up__side center d-flex justify-content-between pb-2">
