--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -83,7 +83,7 @@
             </ul>
             <ul class="center__side fuuter__lists mt-5 col-4 p-0">
                 <li class="list">
-                    <a class="c-black f-14 helvetica-75">გვერდები</a>
+                    <span class="c-black f-14 helvetica-75">გვერდები</span>
                 </li>
                 <li class="list d-flex align-items-center mt-5">
                     <a class="c-light-text f-14 helvetica-55 pointer">კურსები</a>
@@ -109,7 +109,7 @@
                     <span class="c-light-text f-14 helvetica-55 col-10 p-0">გამოიწერე სიახლეები და მიიღე დროულად ყველა ინფორმაცია ჩვენ შესახებ </span>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <form action="" class="mail__form col-6 p-0">
+                    <form action="" class="mail__form  p-0">
                         <div class=" position-relative">
                             <input class="mail__input helvetica-55 c-light-text f-12 w-100" type="text" placeholder="ელ-ფოსტა">
                             <img class="icon" src="./img/Icons.svg" alt="">
