--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -214,7 +214,7 @@
     <section class="academy__section">
         <div class="center d-flex align-items-center justify-content-between">
             <div class="left__side col-6 pointer">
-                <img src="./img/Group 1178.svg" alt="">
+                <img class="w-100" src="./img/Group 1178.svg" alt="">
             </div>
             <div class="right__side col-6">
                 <span class="f-30 helvetica-75 c-black d-block mb-4">რა არის ჩვენი აკადემია?</span>
@@ -260,11 +260,14 @@
                         უახლოესი ინფორმაცია მასტერკლასებზე.</span>
                     <form action="" class="masterclass__form mt-5">
                         <div class="name__surname d-flex">
-                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="სახელი">
-                            <input class="input ml-2 col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="გვარი">
+                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text"
+                                placeholder="სახელი">
+                            <input class="input ml-2 col-4 helvetica-55 c-light-text f-12 w-100" type="text"
+                                placeholder="გვარი">
                         </div>
                         <div class="phone d-flex mt-3">
-                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text" placeholder="ტელ. ნომერი">
+                            <input class="input col-4 helvetica-55 c-light-text f-12 w-100" type="text"
+                                placeholder="ტელ. ნომერი">
                         </div>
                     </form>
                     <div class="mt-2">
@@ -273,10 +276,159 @@
                             <input type="checkbox" id="isPoliticallyExposedPerson" />
                             <span class="checkmark"></span>
                         </label>
-                        <span class="f-12 helvetica-55 c-light-text d-flex mt-3 col-9 p-0">ვეთანხმები ციფრული ინდისუტრიის აკადემიის 
+                        <span class="f-12 helvetica-55 c-light-text d-flex mt-3 col-9 p-0">ვეთანხმები ციფრული
+                            ინდისუტრიის აკადემიის
                             კონფიდენციალურობის პილიტიკას.</span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section class="student__works bc-banner">
+        <div class="center d-flex flex-column align-items-center">
+
+            <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტების ნამუშევრები</h1>
+            <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+                უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+            <div class="w-100 d-flex justify-content-between align-items-center">
+
+                <div class="block mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img src="./img/Group 804.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David Bowie</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-2">14 ოქტომბერი, 2019</span>
+                    </article>
+                    <div class="border-top d-flex w-100 align-items-center justify-content-between py-2 px-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-14 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                        <span class="f-14 c-purple helvetica-55">
+                            გრაფიკ
+                        </span>
+                    </div>
+                </div>
+                <div class="block mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img src="./img/Group 804.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David Bowie</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-2">14 ოქტომბერი, 2019</span>
+                    </article>
+                    <div class="border-top d-flex w-100 align-items-center justify-content-between py-2 px-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-14 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                        <span class="f-14 c-purple helvetica-55">
+                            გრაფიკ
+                        </span>
+                    </div>
+                </div>
+                <div class="block mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img src="./img/Group 804.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David Bowie</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-2">14 ოქტომბერი, 2019</span>
+                    </article>
+                    <div class="border-top d-flex w-100 align-items-center justify-content-between py-2 px-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-14 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                        <span class="f-14 c-purple helvetica-55">
+                            გრაფიკ
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <button class=" helvetica-75 mt-5 blue-button">ნამუშევარი</button>
+
+            </div>
+        </div>
+
+    </section>
+    <section class="finished__courses">
+        <div class="center d-flex flex-column align-items-center">
+            <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტების ნამუშევრები</h1>
+            <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+                უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+            <div class=" mt-4 w-100 course-block">
+                <div class="block py-3 px-4">
+                    <img class="mb-2" src="./img/Path 923.svg" alt="">
+                    <span class=" col-10 f-12 helvetica-55 d-block c-light-text">ტექნოლოგიების განვითარებამ
+                        შესაძლებელი გახადა, რომ ქადა ორი ხელით ვჭამოთ. მადლობა თქვენ ამისთვის!</span>
+                    <div class=" col-10 d-flex w-100 align-items-center justify-content-between py-2 mt-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-12 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="block py-3 px-4">
+                    <img class="mb-2" src="./img/Path 923.svg" alt="">
+                    <span class=" col-10 f-12 helvetica-55 d-block c-light-text">ტექნოლოგიების განვითარებამ
+                        შესაძლებელი გახადა, რომ ქადა ორი ხელით ვჭამოთ. მადლობა თქვენ ამისთვის!</span>
+                    <div class=" col-10 d-flex w-100 align-items-center justify-content-between py-2 mt-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-12 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="block py-3 px-4">
+                    <img class="mb-2" src="./img/Path 923.svg" alt="">
+                    <span class=" col-10 f-12 helvetica-55 d-block c-light-text">ტექნოლოგიების განვითარებამ
+                        შესაძლებელი გახადა, რომ ქადა ორი ხელით ვჭამოთ. მადლობა თქვენ ამისთვის!</span>
+                    <div class=" col-10 d-flex w-100 align-items-center justify-content-between py-2 mt-3">
+                        <div class="d-flex align-items-center">
+                            <img class="mr-2" src="./img/Group 793.svg" alt="">
+                            <span class="f-12 c-light-text helvetica-55">ედვარდ გულაშვილი</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="block__section bc-banner">
+        <div class="center d-flex flex-column align-items-center">
+            <h1 class="f-30 mb-2 helvetica-75 c-black">ბლოგი</h1>
+            <span class="f-16 helvetica-55 c-light-text">გაეცანი სიახლეებს ტექნოლოგიურ სფეროში</span>
+            <div class="w-100 mt-3 d-flex align-items-center justify-content-between">
+                <div class="block p-0 mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img class="w-100" src="./img/Group 852.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3 title">ინტერვიუ UI/UX კურსის </span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-4">ტექნოლოგიების განვითარებამ
+                            შესაძლებელობა მომცა, რომ ქადა ორი
+                            ხელით მეჭამა,მადლობა თქვენ ამისთვის!</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-3">14 ოქტომბერი, 2019</span>
+                    </article>
+                </div>
+                <div class="block p-0 mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img class="w-100" src="./img/Group 852.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3 title">ინტერვიუ UI/UX კურსის </span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-4">ტექნოლოგიების განვითარებამ
+                            შესაძლებელობა მომცა, რომ ქადა ორი
+                            ხელით მეჭამა,მადლობა თქვენ ამისთვის!</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-3">14 ოქტომბერი, 2019</span>
+                    </article>
+                </div>
+                <div class="block p-0 mt-5 mx-3 br-10 overflow-hidden bc-white">
+                    <article class="article d-flex flex-column">
+                        <img class="w-100" src="./img/Group 852.svg" alt="">
+                        <span class="f-16 px-3 c-black helvetica-75 d-block mt-3 title">ინტერვიუ UI/UX კურსის </span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-4">ტექნოლოგიების განვითარებამ
+                            შესაძლებელობა მომცა, რომ ქადა ორი
+                            ხელით მეჭამა,მადლობა თქვენ ამისთვის!</span>
+                        <span class="f-14 px-3 c-light-text helvetica-55 d-block mb-3 mt-3">14 ოქტომბერი, 2019</span>
+                    </article>
+                </div>
+            </div>
+            <div>
+                <button class=" helvetica-75 mt-5 blue-button">ყველა სტატია</button>
+
             </div>
         </div>
     </section>
@@ -329,22 +481,22 @@
             </ul>
             <ul class="center__side fuuter__lists mt-5 col-4 p-0">
                 <li class="list">
-                    <span class="c-black f-14 helvetica-75">გვერდები</span>
+                    <span  class="c-black f-14 helvetica-75">გვერდები</span>
                 </li>
                 <li class="list d-flex align-items-center mt-5">
-                    <span class="c-light-text f-14 helvetica-55">კურსები</span>
+                    <a href="courses.html" class="c-light-text f-14 helvetica-55 pointer">კურსები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">მასტერკლასები</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">მასტერკლასები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">შეთავაზებები</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">შეთავაზებები</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">ბლოგი</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">ბლოგი</a>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <span class="c-light-text f-14 helvetica-55">ჩვენ შესახებ</span>
+                    <a class="c-light-text f-14 helvetica-55 pointer">ჩვენ შესახებ</a>
                 </li>
             </ul>
             <ul class="right__side fuuter__lists mt-5 col-4 p-0">
@@ -356,7 +508,7 @@
                         ინფორმაცია ჩვენ შესახებ </span>
                 </li>
                 <li class="list d-flex align-items-center mt-3">
-                    <form action="" class="mail__form col-6 p-0">
+                    <form action="" class="mail__form  p-0">
                         <div class=" position-relative">
                             <input class="mail__input helvetica-55 c-light-text f-12 w-100" type="text"
                                 placeholder="ელ-ფოსტა">
